# soil-sca

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.py
data/K00362/: README.md
data/K00362/msas/: K00362_rep_with_long_complete_aa_seqs.aln-fasta  MSA_input.aln-fasta
data/K00362/seqs/: K00362_rep.faa  K00362_rep_with_long_complete_aa_seqs.fasta  input.fasta  input_v2.fasta  long_complete_aa_seqs.fasta  top1000seqs.fasta
data/K00370/: README.md
data/K00370/hmms/: TIGR01580.hmm  TIGR01580.hmm.h3f  TIGR01580.hmm.h3i  TIGR01580.hmm.h3m  TIGR01580.hmm.h3p
data/K00370/msas/: MSA_1000.aln-fasta  MSA_800.aln-fasta  MSA_800_with_reference.aln-fasta  MSA_input.aln-fasta
data/K00370/seqs/: K00370_rep.faa  input.fasta  kegg_seqs_unclust.faa  kegg_seqs_unclust_subset1000.faa  soil_seqs_1000.fasta  soil_seqs_1000_with_reference.fasta  soil_seqs_800.fasta  soil_seqs_800_with_reference.fasta
data/K00370/structures/: 1q16.cif
notebooks/: working_nb.ipynb
scripts/: gen_fake_structs_07.py  pymol_sca.py  run_pymol_sca.sh  run_sca_pipeline_K00370.sh  run_sca_pipeline_K00370_TIGR01580subset1000_with_soil_seqs_1000.sh  run_sca_pipeline_PF00074_full.sh
src/mysca/: __main__.py  constants.py  core.py  helpers.py  io.py  main.py  mappings.py  preprocess.py  structures.py
tests/: conftest.py  test_core.py  test_helpers.py  test_io.py  test_preprocess.py  test_structures.py  test_sym_maps.py
tests/_data/: test_cases.xlsx  test_msa05_fijab.txt  test_msa06_fijab.txt  test_msa07_fijab.txt  ~$test_cases.xlsx
tests/_data/msas/: msa01.faa  msa02.faa  msa03.faa  (+4 more)
(+2 files in other folders)
